--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
+# basic options
+title: Nate's new site
+author: LiLynn
+email: your-email@domain.com
+description: New platform, so exciting
+twitter_username: jekyllrb
+github_username:  LiLynn69
 
+# Build settings
+markdown: kramdown
+theme: minimal mistakes
